--- a/ejercicio-4.html
+++ b/ejercicio-4.html
@@ -14,18 +14,21 @@
     />
   </head>
   <body>
+    <!-- Aca comienza el Header -->
     <header class="main-header">
+      <!-- Logo en Container -->
       <div class="container">
-        <h1 class="mh-logo">
+        <h1>
           <img
             src="./Assets/cropped-rame1.png"
             width="50"
             height="50"
-            alt="Flexbox.ninja"
+            alt="Logo.rame"
           />
         </h1>
+        <!-- Comienzo de navr -->
         <nav class="main-nav">
-          <ul class="main-nav-list">
+          <ul>
             <li>
               <a href="#">Inicio</a>
             </li>
