--- a/ejercicio-4.html
+++ b/ejercicio-4.html
@@ -30,16 +30,16 @@
         <nav class="main-nav">
           <ul>
             <li>
-              <a href="#">Inicio</a>
+              <a href="ejercicio-4.html">Header</a>
             </li>
             <li>
-              <a href="#">Sobre nosotros</a>
+              <a href="ejercicio-1.html">Ejercicio-1</a>
             </li>
             <li>
-              <a href="#">Clientes</a>
+              <a href="ejercicio-2.html">Ejercicio-2</a>
             </li>
             <li>
-              <a href="#">Contacto</a>
+              <a href="ejercicio-3.html">Ejercicio-3</a>
             </li>
           </ul>
         </nav>
