cambios en el site

--- a/index.html
+++ b/index.html
@@ -45,5 +45,40 @@
         </nav>
       </div>
     </header>
+    <section class="container2">
+      <div class="Columna1">
+        <h2 class="text text1">Felipe Virasoro Front-End UI Developer</h2>
+        <img class="img" src="./Assets/12.jpg">
+      </div>
+      <div class="Columuna2">
+        <h5 class="text2">Hola! Soy Felipe Virasoro, soy Front-End Developer actualmente cree más de 20 webs con los
+          frameworks: Angular, React js y el cms de WordPress.
+  
+          Me apasiona trabajar en equipo, ser autodidiacta y constantemente formarme.
+  
+          Entre algunas de las tecnologias que trabajo se encuentran: Angular, React js, Tailwind, Boostrap, Html5, css3,
+          Typescript, Javascript y el manejo profesional del CMS con codigo mixto de Wordpress.
+  
+          Tambien me forme en Counseling Humanistico y Agile Coach, estas herramientas me sirven para poder trabajar de
+          manera mas efectiva en proyectos y con equipos.
+  
+           Mis raices son las Bellas Artes, el diseño grafico multimedial y el increible mundo del diseño UX/UI.
+  
+          Mi filosofia se basa en tres ejes: Autoformacion, disciplina y constancia. Estas tres areas me llevaron a ser lo
+          que soy hoy en dia y poder dentro de una empresa desenvolverme con total facilidad.</h5>
+      </div>
+    </section>
+    <section class="card-container">
+      <div class="card-botones">
+        <h2 class="titulo">¿En qué te puedo ayudar?</h2>
+        <a href="/" mat-flat-button class="btn1 links">
+          Adquirir un seguro
+        </a>
+        <a href="/" mat-flat-button class="btn2 links">
+          Realizar una denuncia
+        </a>
+      </div>
+    </section>
+    
   </body>
 </html>
