--- a/ejercicio-4.html
+++ b/ejercicio-4.html
@@ -19,26 +19,30 @@
     <!-- Logo en Container -->
     <div class="container">
       <h1>
-        <img src="./Assets/cropped-rame1.png" width="50" height="50" alt="Logo.rame" />
+        <img
+          src="./Assets/cropped-rame1.png"
+          width="50"
+          height="50"
+          alt="Logo.rame"
+        />
       </h1>
       <!-- Comienzo de navr -->
       <nav class="main-nav">
         <ul>
           <li>
-            <a href="ejercicio-4.html">Header</a>
+            <a href="ejercicio-4.html">Home</a>
           </li>
           <li>
-            <a href="ejercicio-1.html">Ejercicio-1</a>
+            <a href="ejercicio-1.html">Quien soy</a>
           </li>
           <li>
-            <a href="ejercicio-2.html">Ejercicio-2</a>
+            <a href="ejercicio-2.html">Trabajos</a>
           </li>
           <li>
-            <a href="ejercicio-3.html">Ejercicio-3</a>
+            <a href="ejercicio-3.html">Contacto</a>
           </li>
         </ul>
       </nav>
-      <section>
     </div>
   </header>
     <section class="container2">
