--- a/ejercicio-3.html
+++ b/ejercicio-3.html
@@ -14,37 +14,37 @@
     />
   </head>
   <body>
-        <!-- Aca comienza el Header -->
-        <header class="main-header">
-          <!-- Logo en Container -->
-          <div class="container">
-            <h1>
-              <img
-                src="./Assets/cropped-rame1.png"
-                width="50"
-                height="50"
-                alt="Logo.rame"
-              />
-            </h1>
-            <!-- Comienzo de navr -->
-            <nav class="main-nav">
-              <ul>
-                <li>
-                  <a href="ejercicio-4.html">Header</a>
-                </li>
-                <li>
-                  <a href="ejercicio-1.html">Ejercicio-1</a>
-                </li>
-                <li>
-                  <a href="ejercicio-2.html">Ejercicio-2</a>
-                </li>
-                <li>
-                  <a href="ejercicio-3.html">Ejercicio-3</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </header>
+<!-- Aca comienza el Header -->
+<header class="main-header">
+  <!-- Logo en Container -->
+  <div class="container">
+    <h1>
+      <img
+        src="./Assets/cropped-rame1.png"
+        width="50"
+        height="50"
+        alt="Logo.rame"
+      />
+    </h1>
+    <!-- Comienzo de navr -->
+    <nav class="main-nav">
+      <ul>
+        <li>
+          <a href="ejercicio-4.html">Home</a>
+        </li>
+        <li>
+          <a href="ejercicio-1.html">Quien soy</a>
+        </li>
+        <li>
+          <a href="ejercicio-2.html">Trabajos</a>
+        </li>
+        <li>
+          <a href="ejercicio-3.html">Contacto</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
     <h1>Formulario</h1>
     <form>
       <h3>
