--- a/index.html
+++ b/index.html
@@ -1,84 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practicamos Header</title>
-    <link rel="STYLESHEET" href="ejercicio-4.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tiro+Gurmukhi&display=swap"
-      rel="stylesheet"
-  />
-  </head>
-  <body>
-    <!-- Aca comienza el Header -->
-    <header class="main-header">
-      <!-- Logo en Container -->
-      <div class="container">
-        <h1>
-          <img
-            src="./Assets/cropped-rame1.png"
-            width="50"
-            height="50"
-            alt="Logo.rame"
-          />
-        </h1>
-        <!-- Comienzo de navr -->
-        <nav class="main-nav">
-          <ul>
-            <li>
-              <a href="ejercicio-4.html">Header</a>
-            </li>
-            <li>
-              <a href="ejercicio-1.html">Ejercicio-1</a>
-            </li>
-            <li>
-              <a href="ejercicio-2.html">Ejercicio-2</a>
-            </li>
-            <li>
-              <a href="ejercicio-3.html">Ejercicio-3</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <section class="container2">
-      <div class="Columna1">
-        <h2 class="text text1">Felipe Virasoro Front-End UI Developer</h2>
-        <img class="img" src="./Assets/12.jpg">
-      </div>
-      <div class="Columuna2">
-        <h5 class="text2">Hola! Soy Felipe Virasoro, soy Front-End Developer actualmente cree más de 20 webs con los
-          frameworks: Angular, React js y el cms de WordPress.
-  
-          Me apasiona trabajar en equipo, ser autodidiacta y constantemente formarme.
-  
-          Entre algunas de las tecnologias que trabajo se encuentran: Angular, React js, Tailwind, Boostrap, Html5, css3,
-          Typescript, Javascript y el manejo profesional del CMS con codigo mixto de Wordpress.
-  
-          Tambien me forme en Counseling Humanistico y Agile Coach, estas herramientas me sirven para poder trabajar de
-          manera mas efectiva en proyectos y con equipos.
-  
-           Mis raices son las Bellas Artes, el diseño grafico multimedial y el increible mundo del diseño UX/UI.
-  
-          Mi filosofia se basa en tres ejes: Autoformacion, disciplina y constancia. Estas tres areas me llevaron a ser lo
-          que soy hoy en dia y poder dentro de una empresa desenvolverme con total facilidad.</h5>
-      </div>
-    </section>
-    <section class="card-container">
-      <div class="card-botones">
-        <h2 class="titulo">¿En qué te puedo ayudar?</h2>
-        <a href="/" mat-flat-button class="btn1 links">
-          Adquirir un seguro
-        </a>
-        <a href="/" mat-flat-button class="btn2 links">
-          Realizar una denuncia
-        </a>
-      </div>
-    </section>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pagina Propia</title>
+  <link rel="STYLESHEET" href="./css/index.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Tiro+Gurmukhi&display=swap" rel="stylesheet" />
+  <!-- Se integra el CDN de Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body>
+  <!-- Aca comienza el Header -->
+  <header class="main-header">
+    <!-- Logo en Container -->
+    <div class="container">
+      <h1>
+        <img src="./Assets/cropped-rame1.png" width="50" height="50" alt="Logo.rame" />
+      </h1>
+      <!-- Comienzo de navr -->
+      <nav class="main-nav">
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="./html/quiensoy.html">Quien soy</a>
+          </li>
+          <li>
+            <a href="trabajos.html">Trabajos</a>
+          </li>
+          <li>
+            <a href="ejercicio-3.html">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+      <!-- Section de Fotografia y bibliografia -->
+<section  class="grid grid-cols-2 gap-4">
+  <div class="text-header">
+    <h1>hola</h1>
+  </div>
+  <div class="img-header">
+    <img class="profile" src="./Assets/Profile-mobile.png">
+  </div>
+</section>
+  <section class="container2">
+    <div class="Columna1">
+      <h2 class="text text1">Felipe Virasoro Front-End UI Developer</h2>
+      <img class="img" src="./Assets/12.jpg">
+    </div>
+    <!-- Section de Fotografia y bibliografia -->
+    <div class="Columuna2 pt-10">
+      <h5 class="text2">Hola! Soy Felipe Virasoro, soy Front-End Developer.
+        Me apasiona trabajar en equipo, ser autodidiacta y constantemente formarme.
+        Entre algunas de las tecnologias que trabajo se encuentran: Angular, React js, Tailwind, Boostrap, Html5, css3,
+        Typescript, Javascript y el manejo profesional del CMS con codigo mixto de Wordpress.
+        Tambien me forme en Counseling Humanistico y Agile Coach, estas herramientas me sirven para poder trabajar de
+        manera mas efectiva en proyectos y con equipos.
+      </h5>
+    </div>
+  </section>
+  <!-- Section de llamados a la Accion -->
+  <section class="card-container">
+    <div class="card-botones">
+      <h2 class="titulo">¿En qué te puedo ayudar?</h2>
+      <a href="/" class="btn1 links">
+        Contratar un servicio
+      </a>
+      <a href="/" class="btn2 links boton2">
+        Descargar Cv
+      </a>
+    </div>
+  </section>
+
+</body>
+
 </html>
